--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -82,3 +82,19 @@ p {
   font-size: 1.8rem;
   font-weight: 400;
 }
+button {
+  border: solid 1px var(--main-color);
+  border-radius: 0.5rem;
+  font-size: 1.4rem;
+  font-weight: 400;
+  padding: 0.5rem 0.8rem;
+  outline: none;
+  color: var(--main-color);
+  background-color: white;
+  cursor: pointer;
+  transition: 100ms;
+}
+button:hover {
+  color: white;
+  background-color: var(--main-color);
+}
